--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "connection.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon src/server.js"
   },
   "type": "module",
   "keywords": [],
